--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -244,7 +244,8 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>Relaxare la hotel + plimbare si experimentare China Town.</p>
+                    <p>- Relaxare la hotel
+                       - plimbare si experimentare China Town.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
