--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -244,8 +244,8 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>- Relaxare la hotel
-                       - plimbare si experimentare China Town.</p>
+                    <p>- Relaxare la hotel </p>
+                    <p>- plimbare si experimentare China Town.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
