--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -210,7 +210,7 @@
                     <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
                 </div>
                 <div class="destination">
-                    <h3>Phi Phi Islands</h3>
+                    <h3>Phi Phi Island</h3>
                     <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
                 </div>
             </div>
@@ -244,12 +244,13 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>- Relaxare la hotel </p>
-                    <p>- plimbare si experimentare China Town.</p>
+                    <p>Relax first day in Pattaya </p>
+                    <p>Exploreaza Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
-                    <p>Floating Market + Train Market + Dinner Cruise.</p>
+                    <p>Descopera Maretia Sanctuarului Adevarului din Pattaya </p>
+                    <p>Exploreaza Stilul International la Terminal 21 Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 3</h3>
