--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -244,41 +244,49 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>Relax first day in Pattaya </p>
+                    <p>Relax First Day in Pattaya </p>
+                    <p>Enjoy dinner at Nest Bird with stunning beach views </p>
                     <p>Exploreaza Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
                     <p>Descopera Maretia Sanctuarului Adevarului din Pattaya </p>
                     <p>Exploreaza Stilul International la Terminal 21 Pattaya </p>
+                    <p>Relaxare si Revitalizare cu Masajul Thai </p>                
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 3</h3>
-                    <p>Explorarea templelor si a palatului regal + shopping.</p>
+                    <p>Escape intr-un paradis tropical pe Koh Larn o insula minunata aproape de Pattaya </p>
+                    <p>Dive into adventure with exciting water sports on Koh Larn </p>
+                    <p>Enjoy Koh Larn beaches with clear waters and soft sand, including Tawaen Beach and more </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 4</h3>
-                    <p>Zbor catre Phuket + Relaxare la hotel + Masaj Thailandez.</p>
+                    <p>Arrive at Phuket Town.</p>
+                    <p>Step back in time and explore the colorful streets of Phuket Old Town </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 5</h3>
-                    <p>Relaxare la plaja si vizitarea sanctuarului pentru elefanti.</p>
+                    <p>Visit the Majestic Big Buddha in Phuket, One of Phuket Most Famous Landmarks </p>
+                    <p>Embark on an Unforgettable Elephant Trek in Phuket </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 6</h3>
-                    <p>Island Hopping - Discover nearby islands.</p>
+                    <p>Relax on Phuket’s Famous Beaches like Banana Beach, Kata Beach, and More </p>
+                    <p>Shopping destinations, from luxury malls to local night markets </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 7</h3>
-                    <p>Relaxation at the resort - Enjoy spa treatments.</p>
+                    <p>Café Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
+                    <p>Enter a world of fun at Carnival Magic Phuket top theme park </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 8</h3>
-                    <p>Local Market Experience - Shop for souvenirs.</p>
+                    <p>Experience dinner in the jungle surrounded by nature in Phuket </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
-                    <p>Free day in Phuket - Explore or relax as you wish.</p>
+                    <p>Experience the Beauty of Phi Phi Islands in One Day Trip </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 10</h3>
