--- a/honeymoon.html
+++ b/honeymoon.html
@@ -233,7 +233,7 @@
             display: block;
         }
         .gallery img {
-            width: 500px;
+            width: 100%;
             height: 250px;
             border-radius: 10px;
             object-fit: cover;
