--- a/honeymoon.html
+++ b/honeymoon.html
@@ -196,27 +196,56 @@
         .menu-overlay nav a:hover {
             background: rgba(255, 255, 255, 0.2);
         }
+        .gallery img {
+            width: 100%;
+            height: 200px;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+        .activity h3, .gallery h3 {
+            margin: 10px 0;
+            color: #313734;
+        }
         @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2.5em;
+            }
+            .cta-button {
+                font-size: 1.2em;
+            }
+        }
+        @media (max-width: 480px) {
             .hero h1 {
                 font-size: 2em;
             }
-            .cta-button {
-                font-size: 0.9em;
+            .destinations {
+                flex-direction: column;
+                align-items: center;
             }
-            .destination h3 {
-                font-size: 1.1em;
-            }
-            .destination p {
-                font-size: 0.8em;
+            .destination {
+                width: 90%;
             }
         }
-            .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: center;
+        .social-media {
+            margin-top: 10px;
         }
-        .gallery-container {
+
+        .social-icon {
+            margin: 0 10px;
+        }
+
+        .social-icon img {
+            width: 30px; /* Adjust icon size */
+            height: 30px; /* Adjust icon size */
+        }
+        .intro-text {
+            font-family: 'Georgia', serif; /* Use a premium font */
+            font-size: 18px; /* Adjust size for readability */
+            line-height: 1.6; /* Improve spacing between lines */
+            color: #333; /* Darker color for better contrast */
+            margin: 20px 0; /* Add some space around the text */
+        }
+        .testimonial-container, .activity-container, .gallery-container {
             max-width: 600px;
             margin: 20px auto;
             background-color: #e0e0e0;
@@ -225,21 +254,18 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             position: relative;
         }
-        .gallery {
+        .testimonial, .activity, .gallery {
             display: none;
             text-align: center;
         }
-        .gallery.active {
+        .testimonial.active, .activity.active, .gallery.active {
             display: block;
         }
-        .gallery img {
-            width: 100%;
-            height: 250px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-        .gallery h3 {
-            margin: 10px 0;
+        .prev, .next {
+            background: transparent;
+            border: none;
+            font-size: 2em;
+            cursor: pointer;
             color: #313734;
         }
         .social-media {
