--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -244,9 +244,9 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>Relax First Day in Pattaya </p>
-                    <p>Enjoy dinner at Nest Bird with stunning beach views </p>
-                    <p>Exploreaza Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
+                    <p>·Relax First Day in Pattaya </p>
+                    <p>·Enjoy dinner at Nest Bird with stunning beach views </p>
+                    <p>·Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 4</h3>
-                    <p>Arrive at Phuket Town.</p>
+                    <p>Arrive at Phuket Town </p>
                     <p>Step back in time and explore the colorful streets of Phuket Old Town </p>
                 </div>
                 <div class="itinerary-card">
@@ -277,7 +277,7 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 7</h3>
-                    <p>Café Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
+                    <p>Cafe Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
                     <p>Enter a world of fun at Carnival Magic Phuket top theme park </p>
                 </div>
                 <div class="itinerary-card">
@@ -287,11 +287,35 @@
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
                     <p>Experience the Beauty of Phi Phi Islands in One Day Trip </p>
+                    <P>Experience breathtaking panoramic views at Phi Phi Viewpoint </P>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 10</h3>
-                    <p>Departure - Take wonderful memories home.</p>
+                    <p></p>
                 </div>
+                <div class="itinerary-card">
+                    <h3>Day 11</h3>
+                    <p>Discover Asiatique in Bangkok for shopping, dining, and riverside views </p>                    
+                    <p>Explore Khao San Road in Bangkok for vibrant nightlife and street food </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Day 12</h3>
+                    <p>Experience the charm of Bangkok Floating Market with colorful boats </p>
+                    <p>Visit Train Market for a unique shopping experience with passing trains </p>                   
+                    <p>Explore Bangkok Chinatown for delicious street food </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Day 13</h3>
+                    <p>Bangkok stunning Temple of Dawn with breathtaking riverside views </p>
+                    <p>Rent a traditional Thai dress and capture beautiful memories in Bangkok </p>
+                    <p>Visit the Grand Palace with stunning architecture and rich history </p>
+                    <p>Shop dine and explore Bangkok luxury riverside mall at ICONSIAM </p>
+                    <p>Enjoy a scenic dinner cruise on the Chao Phraya River </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Day 14</h3>
+                    <p>Step into style at Platinum Mall, Bangkok's ultimate shopping experience </p>
+                </div>            
             </div>
         </section>
         
