--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -244,9 +244,9 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>·Relax First Day in Pattaya </p>
-                    <p>·Enjoy dinner at Nest Bird with stunning beach views </p>
-                    <p>·Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
+                    <p>• Relax First Day in Pattaya </p>
+                    <p>• Enjoy dinner at Nest Bird with stunning beach views </p>
+                    <p> Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
