--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     </div>
     
     <div class="hero">
-        <h1>Exploreaza Thailanda cu noi!</h1>
+        <h1>Exploreaza Thailanda cu noi! salut</h1>
         <a href="Booking.html" class="cta-button">Rezerva acum</a>
     </div>
     
