--- a/destinations.html
+++ b/destinations.html
@@ -175,13 +175,13 @@
     
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-            <a href="booking.html">Rezerva acum</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
+            <a href="Services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="Booking.html">Rezerva acum</a>
+            <a href="about.html">Despre noi</a>
         </nav>
     </div>
     
