--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -245,76 +245,81 @@
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
                     <p>• Relax First Day in Pattaya </p>
-                    <p>• Enjoy dinner at Nest Bird with stunning beach views </p>
-                    <p> Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
+                    <p>• Dinner at Nest Bird with stunning beach views </p>
+                    <p>• Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
-                    <p>Descopera Maretia Sanctuarului Adevarului din Pattaya </p>
-                    <p>Exploreaza Stilul International la Terminal 21 Pattaya </p>
-                    <p>Relaxare si Revitalizare cu Masajul Thai </p>                
+                    <p>• Descopera Maretia Sanctuarului Adevarului </p>
+                    <p>• Exploreaza Stilul International la Terminal 21 Pattaya </p>
+                    <p>• Relaxare si Revitalizare cu Masajul Thai </p>
+                    <p>• Experience the dazzling Tiffany Show </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 3</h3>
-                    <p>Escape intr-un paradis tropical pe Koh Larn o insula minunata aproape de Pattaya </p>
-                    <p>Dive into adventure with exciting water sports on Koh Larn </p>
-                    <p>Enjoy Koh Larn beaches with clear waters and soft sand, including Tawaen Beach and more </p>
+                    <p>• Escape intr-un paradis tropical pe Koh Larn </p>
+                    <p>• Dive into adventure with exciting water sports </p>
+                    <p>• Enjoy Koh Larn beaches with clear waters and soft sand </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 4</h3>
-                    <p>Arrive at Phuket Town </p>
-                    <p>Step back in time and explore the colorful streets of Phuket Old Town </p>
+                    <p>• Arrive at Phuket City </p>
+                    <p>• Explore the colorful streets of Phuket Old Town </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 5</h3>
-                    <p>Visit the Majestic Big Buddha in Phuket, One of Phuket Most Famous Landmarks </p>
-                    <p>Embark on an Unforgettable Elephant Trek in Phuket </p>
+                    <p>• Visit the Majestic Big Buddha in Phuket, One of Phuket Most Famous Landmarks </p>
+                    <p>• Embark on an Unforgettable Elephant Trek in Phuket </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 6</h3>
-                    <p>Relax on Phuket’s Famous Beaches like Banana Beach, Kata Beach, and More </p>
-                    <p>Shopping destinations, from luxury malls to local night markets </p>
+                    <p>• Relax on Phuket’s Famous Beaches like Banana Beach, Kata Beach, and More </p>
+                    <p>• Shopping destinations, from luxury malls to local night markets </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 7</h3>
-                    <p>Cafe Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
-                    <p>Enter a world of fun at Carnival Magic Phuket top theme park </p>
+                    <p></p>
+                    <p>• Catch the sunset and a stunning fire show on the beach </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 8</h3>
-                    <p>Experience dinner in the jungle surrounded by nature in Phuket </p>
+                    <p>• Dive into fun at Andaman Sea Water Park </p>
+                    <p>• Experience dinner in the jungle surrounded by nature in Phuket </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
-                    <p>Experience the Beauty of Phi Phi Islands in One Day Trip </p>
-                    <P>Experience breathtaking panoramic views at Phi Phi Viewpoint </P>
+                    <p>• The Beauty of Phi Phi Island </p>
+                    <p>• Discover the breathtaking beauty of Maya Bay </p>
+                    <p>• Explore the stunning Pi Leh Lagoon </p>
+                    <p>• Snorkeling in crystal-clear waters and vibrant marine life </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 10</h3>
-                    <p></p>
+                    <p>• Cafe Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
+                    <p>• Enter a world of fun at Carnival Magic Phuket top theme park </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 11</h3>
-                    <p>Discover Asiatique in Bangkok for shopping, dining, and riverside views </p>                    
-                    <p>Explore Khao San Road in Bangkok for vibrant nightlife and street food </p>
+                    <p>• Discover Asiatique in Bangkok for shopping, dining, and riverside views </p>                    
+                    <p>• Explore Khao San Road in Bangkok for vibrant nightlife and street food </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 12</h3>
-                    <p>Experience the charm of Bangkok Floating Market with colorful boats </p>
-                    <p>Visit Train Market for a unique shopping experience with passing trains </p>                   
-                    <p>Explore Bangkok Chinatown for delicious street food </p>
+                    <p>• Experience the charm of Bangkok Floating Market with colorful boats </p>
+                    <p>• Visit Train Market for a unique shopping experience with passing trains </p>                   
+                    <p>• Explore Bangkok Chinatown for delicious street food </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 13</h3>
-                    <p>Bangkok stunning Temple of Dawn with breathtaking riverside views </p>
-                    <p>Rent a traditional Thai dress and capture beautiful memories in Bangkok </p>
-                    <p>Visit the Grand Palace with stunning architecture and rich history </p>
-                    <p>Shop dine and explore Bangkok luxury riverside mall at ICONSIAM </p>
-                    <p>Enjoy a scenic dinner cruise on the Chao Phraya River </p>
+                    <p>• Bangkok stunning Temple of Dawn with breathtaking riverside views </p>
+                    <p>• Rent a traditional Thai dress and capture beautiful memories in Bangkok </p>
+                    <p>• Visit the Grand Palace with stunning architecture and rich history </p>
+                    <p>• Shop dine and explore Bangkok luxury riverside mall at ICONSIAM </p>
+                    <p>• Enjoy a scenic dinner cruise on the Chao Phraya River </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 14</h3>
-                    <p>Step into style at Platinum Mall, Bangkok's ultimate shopping experience </p>
+                    <p>• Step into style at Platinum Mall, Bangkok's ultimate shopping experience </p>
                 </div>            
             </div>
         </section>
