--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -182,13 +182,13 @@
 
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
+            <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <a href="booking.html">Book Now</a>
-            <a href="offers.html">Offers</a>
+            <a href="Booking.html">Rezerva acum</a>
+            <a href="about.html">Despre noi</a>
         </nav>
     </div>
 
@@ -201,17 +201,22 @@
         <section id="reasons" class="section">
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
+                
                 <div class="destination">
-                    <h3>Bangkok</h3>
-                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phuket</h3>
+                    <h3>Pattaya</h3>
                     <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
                 </div>
                 <div class="destination">
-                    <h3>Phi Phi Island</h3>
+                    <h3>Phuket</h3>
                     <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>
+                <div class="destination">
+                    <h3>Phi Phi</h3>
+                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>
+                <div class="destination">
+                    <h3>Bangkok</h3>
+                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
                 </div>
             </div>
         </section>
@@ -220,17 +225,22 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2017/08/30/02/18/phi-2691460_1280.jpg" alt="Bangkok Tour">
+                    <img src="https://cdn.pixabay.com/photo/2017/09/09/15/47/bangkok-2732437_640.jpg" alt="Bangkok Tour">
                     <h3>Bangkok Highlights</h3>
                     <p>Sedere 3 nopti. </p>
                 </div>
+                 <div class="destination">
+                    <img src="https://cdn.pixabay.com/photo/2023/02/18/13/39/highway-7797953_1280.jpg" alt="Bangkok Tour">
+                    <h3>Pattaya</h3>
+                    <p>Sedere 3 nopti. </p>
+                </div>
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2016/04/26/11/50/thailand-1356685_1280.jpg" alt="Phuket Getaway">
+                    <img src="https://cdn.pixabay.com/photo/2019/07/26/17/57/phuket-4365305_1280.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
                     <p>Sedere 5 nopti.</p>
                 </div>
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2016/10/06/10/02/phi-1727036_1280.jpg" alt="Phi Phi Islands">
+                    <img src="https://images.unsplash.com/photo-1562446964-5196f34db871?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Phi Phi Islands">
                     <h3>Phi Phi Island Adventure</h3>
                     <p>Sedere 2 nopti</p>
                 </div>
