--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -288,8 +288,9 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 7</h3>
-                    <p></p>
-                    <p>• Catch the sunset and a stunning fire show on the beach </p>
+                    <p>• Explore the best of Phuket Island </p>
+                    <p>• Snorkeling in crystal-clear waters </p>
+                    <p>• Catch the sunset and a stunning fire show on the beach </p>                
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 8</h3>
