--- a/ChiangRai.html
+++ b/ChiangRai.html
@@ -221,20 +221,20 @@
             <h2 class="header">Activitati populare</h2>
             <div class="activity-container">
                 <div class="activity active">
-                    <img src="https://images.unsplash.com/photo-1639887957004-955085959ce9?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Beach Activities">
-                    <h3>Dinner cruise</h3>
-                </div>
-                <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694824995159-2093477bc337?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHdhdCUyMGFydW58ZW58MHx8MHx8fDA%3D" alt="Elephant Riding">
+                    <img src="https://cdn.pixabay.com/photo/2017/06/04/19/14/chiang-rai-2371951_1280.jpg" alt="Beach Activities">
                     <h3>Vizitarea templelor</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1696350734699-f5c0a8f48435?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9ua2V5JTIwdGhhaWxhbmR8ZW58MHx8MHx8fDA%3D" alt="Food Tours">
-                    <h3>Safari zoo</h3>
+                    <img src="https://images.pexels.com/photos/27090137/pexels-photo-27090137/free-photo-of-garden-and-park-at-doi-tung-royal-villa-in-thailand.jpeg" alt="Elephant Riding">
+                    <h3>Gradina Doi Tung</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694676319276-3731a7320ecd?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Food Tours">
-                    <h3>Shopping</h3>
+                    <img src="https://images.pexels.com/photos/17101691/pexels-photo-17101691/free-photo-of-woman-in-traditional-clothing.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Food Tours">
+                    <h3>Triburi locale</h3>
+                </div>
+                <div class="activity">
+                    <img src="https://images.pexels.com/photos/26689321/pexels-photo-26689321/free-photo-of-zebras-in-zoo.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Food Tours">
+                    <h3>ZOO</h3>
                 </div>
                 <button class="arrow prev" onclick="showActivity(-1)">❮</button>
                 <button class="arrow next" onclick="showActivity(1)">❯</button>
@@ -244,22 +244,22 @@
         <h3 class="header">Gallery</h3>
         <div class="slideshow-container">
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1531169628939-e84f860fa5d6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 1" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2014/06/18/07/22/white-temple-370910_960_720.jpg" alt="Attraction 1" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1501139187767-79e3d8121ea8?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHR1ayUyMHR1a3xlbnwwfHwwfHx8MA%3D%3D" alt="Attraction 2" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2021/10/19/09/08/pottery-6722994_1280.jpg" alt="Attraction 2" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://plus.unsplash.com/premium_photo-1682098240884-9dfc7bf048f0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmFuZ2tva3xlbnwwfHwwfHx8MA%3D%3D" alt="Attraction 3" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2017/04/07/11/36/chiang-mai-2210767_1280.jpg" alt="Attraction 3" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1669790560369-f6f15f5bb2b6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGJhbmdrb2t8ZW58MHx8MHx8fDA%3D" alt="Attraction 4" onclick="openModal(this.src)">
+                <img src="https://images.pexels.com/photos/27105598/pexels-photo-27105598/free-photo-of-portrait-of-a-senior-woman-wearing-a-traditional-headdress.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Attraction 4" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1510379872535-9310dc6fd6a7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 5" onclick="openModal(this.src)">
+                <img src="https://images.pexels.com/photos/13914044/pexels-photo-13914044.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Attraction 5" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1672934324710-21e765dec574?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 6" onclick="openModal(this.src)">
+                <img src="https://images.pexels.com/photos/18022831/pexels-photo-18022831/free-photo-of-view-of-blue-temple-in-chiang-rai.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Attraction 6" onclick="openModal(this.src)">
             </div>
         </div>
     </div>
