--- a/Chiangmai.html
+++ b/Chiangmai.html
@@ -193,13 +193,13 @@
     <div class="menu-overlay" id="menuOverlay">
        
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Rezerva acum</a>
-            <a href="offers.html">Oferte</a>
+            <a href="about.html">Despre noi</a>
         </nav>
     </div>
     
@@ -221,20 +221,20 @@
             <h2 class="header">Activitati populare</h2>
             <div class="activity-container">
                 <div class="activity active">
-                    <img src="https://images.unsplash.com/photo-1639887957004-955085959ce9?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Beach Activities">
-                    <h3>Piata de noapte</h3>
+                    <img src="https://images.pexels.com/photos/18129764/pexels-photo-18129764/free-photo-of-elephants-near-river.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Beach Activities">
+                    <h3>Elephant sanctuary </h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694824995159-2093477bc337?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHdhdCUyMGFydW58ZW58MHx8MHx8fDA%3D" alt="Elephant Riding">
-                    <h3>Vizitarea templelor</h3>
+                    <img src="https://cdn.pixabay.com/photo/2017/04/07/11/36/chiang-mai-2210767_1280.jpg" alt="Elephant Riding">
+                    <h3>Loy Khratong Festival</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1696350734699-f5c0a8f48435?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9ua2V5JTIwdGhhaWxhbmR8ZW58MHx8MHx8fDA%3D" alt="Food Tours">
-                    <h3>Safari zoo</h3>
+                    <img src="https://cdn.pixabay.com/photo/2019/01/19/13/26/tea-plantations-3941741_960_720.jpg" alt="Food Tours">
+                    <h3>Plantatie de ceai</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694676319276-3731a7320ecd?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Food Tours">
-                    <h3>Shopping</h3>
+                    <img src="https://images.pexels.com/photos/8258340/pexels-photo-8258340.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Food Tours">
+                    <h3>Safari</h3>
                 </div>
                 <button class="arrow prev" onclick="showActivity(-1)">❮</button>
                 <button class="arrow next" onclick="showActivity(1)">❯</button>
@@ -244,22 +244,22 @@
         <h3 class="header">Gallery</h3>
         <div class="slideshow-container">
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1531169628939-e84f860fa5d6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 1" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2020/06/12/03/51/night-view-5288937_1280.jpg" alt="Attraction 1" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1501139187767-79e3d8121ea8?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHR1ayUyMHR1a3xlbnwwfHwwfHx8MA%3D%3D" alt="Attraction 2" onclick="openModal(this.src)">
+                <img src="https://images.pexels.com/photos/3044440/pexels-photo-3044440.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Attraction 2" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://plus.unsplash.com/premium_photo-1682098240884-9dfc7bf048f0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmFuZ2tva3xlbnwwfHwwfHx8MA%3D%3D" alt="Attraction 3" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2021/01/25/08/49/temple-5947672_640.jpg" alt="Attraction 3" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1669790560369-f6f15f5bb2b6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGJhbmdrb2t8ZW58MHx8MHx8fDA%3D" alt="Attraction 4" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2016/10/20/07/58/measure-1754861_1280.jpg" alt="Attraction 4" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1510379872535-9310dc6fd6a7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 5" onclick="openModal(this.src)">
+                <img src="https://images.pexels.com/photos/130159/pexels-photo-130159.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Attraction 5" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1672934324710-21e765dec574?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 6" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2017/02/28/08/58/sunset-2105235_960_720.jpg" alt="Attraction 6" onclick="openModal(this.src)">
             </div>
         </div>
     </div>
