--- a/destinations.html
+++ b/destinations.html
@@ -227,7 +227,7 @@
                 <img src="https://cdn.pixabay.com/photo/2020/08/04/14/51/pattaya-5463040_1280.jpg" alt="Pattaya">
                 <h3>Pattaya</h3>
                 <p>Un loc plin de viață și distracție.</p>
-                <a href="pattaya.html" class="cta-button">Descoperă</a>
+                <a href="Pattaya.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://cdn.pixabay.com/photo/2018/03/23/06/21/hua-hin-3252770_1280.jpg" alt="Ayutthaya">
