--- a/Pattaya.html
+++ b/Pattaya.html
@@ -193,13 +193,13 @@
     <div class="menu-overlay" id="menuOverlay">
        
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Rezerva acum</a>
-            <a href="offers.html">Oferte</a>
+            <a href="about.html">Despre noi</a>
         </nav>
     </div>
     
@@ -222,7 +222,7 @@
             <div class="activity-container">
                 <div class="activity active">
                     <img src="https://images.unsplash.com/photo-1642405924315-725846b59e74?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cGF0dGF5YSUyMGJlYWNofGVufDB8MHwwfHx8MA%3D%3D" alt="Beach Activities">
-                    <h3>Activitati pe plaja</h3>
+                    <h3>Relaxare la plaja</h3>
                 </div>
                 <div class="activity">
                     <img src="https://images.unsplash.com/photo-1644902617098-45abe72a7445?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c2FuY3R1YXJ5JTIwb2YlMjB0cnV0aHxlbnwwfDB8MHx8fDA%3D" alt="Elephant Riding">
