--- a/destinations.html
+++ b/destinations.html
@@ -239,13 +239,13 @@
                 <img src="https://cdn.pixabay.com/photo/2018/01/27/12/16/kho-samui-3111068_1280.jpg" alt="Koh Samui">
                 <h3>Koh Samui</h3>
                 <p>Insulă paradisiacă pentru relaxare.</p>
-                <a href="kohsamui.html" class="cta-button">Descoperă</a>
+                <a href="Kohsamui.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.pexels.com/photos/4091042/pexels-photo-4091042.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Sukhothai">
                 <h3>Khao Lak</h3>
                 <p>Un loc de patrimoniu mondial plin de cultură.</p>
-                <a href="Khaolak.html" class="cta-button">Descoperă</a>
+                <a href="khaolak.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://cdn.pixabay.com/photo/2018/02/26/05/21/waterfall-3182326_1280.jpg" alt="Kanchanaburi">
@@ -263,13 +263,13 @@
                 <img src="https://images.pexels.com/photos/8077406/pexels-photo-8077406.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Samut Prakan">
                 <h3>Koh Chang</h3>
                 <p>Cunoscută pentru Parcul de viață sălbatică.</p>
-                <a href="Kohchang.html" class="cta-button">Descoperă</a>
+                <a href="kohchang.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1579554632071-cffdaad3738c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Koh Phangan</h3>
                 <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
-                <a href="Kohphangan.html" class="cta-button">Descoperă</a>
+                <a href="kohphangan.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1558983925-819e859f3c70?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
@@ -281,7 +281,7 @@
                 <img src="https://images.unsplash.com/photo-1715356747228-0b7261d5083c?q=80&w=1884&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Koh Tao</h3>
                 <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
-                <a href="Kohtao.html" class="cta-button">Descoperă</a>
+                <a href="kohtao.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1642391326176-cf6e4ff39f4e?q=80&w=1812&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
