--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             </div>
             <div class="offer">
                 <img src="https://cdn.pixabay.com/photo/2021/09/06/16/04/magnifying-glass-6601965_960_720.jpg" alt="Wellness Retreat">
-                <h3>Vezi alte oferte oferite de noi!</h3>
+                <h3>Vezi alte oferte!</h3>
                 <p>Exploreaza toate ofertele, sau creaza-ti propia experienta.</p>
                 <a href="offers.html" class="detalii-button">Detalii</a>
             </div>
